# optimade-python-tools

./: .codecov.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  NOTES.md  Optimade_To_MongoDB_Converter.ipynb  Optimade_To_MongoDB_Tester.ipynb  Pipfile  Previous codes.ipynb  Procfile  README.md  Untitled.ipynb  action.yml  codecov.yml  default_config.json  docker-compose.yml  example_config.json  mkdocs.yml  myProgram_michael.ipynb  openapi.json  optimade-version.json  optimade_config.json  pyproject.toml  pytest.ini  requirements-client.txt  requirements-dev.txt  requirements-docs.txt  requirements-http-client.txt  requirements-optional.txt  requirements-server.txt  requirements.txt  run.sh  (+5 more)
.ci/: assert_version.py  diff_spec.sh  docker_config.json  index_openapi_diff.sh  json_diff.sh  openapi_diff.sh  optimade-version.json  optimade_version_update.py
.docker/: docker_config.json  run.sh
.github/: CODEOWNERS  dependabot.yml  fly.toml
0.10.0/: 404.html  index.html  objects.inv  sitemap.xml
0.11.0/: 404.html  index.html  objects.inv  sitemap.xml
0.12.0/: 404.html  index.html  objects.inv  sitemap.xml
0.12.1/: 404.html  index.html  objects.inv  sitemap.xml
0.12.2/: 404.html  index.html  objects.inv  sitemap.xml
0.12.3/: 404.html  index.html  sitemap.xml
0.12.4/: 404.html  index.html  sitemap.xml
0.12.5/: 404.html  index.html  objects.inv  sitemap.xml
0.12.6/: 404.html  index.html  objects.inv  sitemap.xml
0.12.7/: 404.html  index.html  sitemap.xml
0.12.8/: 404.html  index.html  objects.inv  sitemap.xml
0.12.9/: 404.html  index.html  objects.inv  sitemap.xml
0.13.0/: 404.html  index.html  sitemap.xml
0.13.1/: 404.html  index.html  objects.inv  sitemap.xml
0.13.2/: 404.html  index.html  sitemap.xml
0.13.3/: 404.html  index.html  sitemap.xml
0.14.0/: 404.html  index.html  objects.inv  sitemap.xml
0.14.1/: 404.html  index.html  objects.inv  sitemap.xml
0.15.0/: 404.html  index.html  objects.inv  sitemap.xml
0.15.1/: 404.html  index.html  sitemap.xml
0.15.2/: 404.html  index.html  sitemap.xml
0.15.3/: 404.html  index.html  objects.inv  sitemap.xml
0.15.4/: 404.html  index.html  sitemap.xml
0.15.5/: 404.html  index.html  sitemap.xml
0.16.0/: 404.html  index.html  objects.inv  sitemap.xml
0.16.1/: 404.html  index.html  objects.inv  sitemap.xml
0.16.10/: 404.html  index.html  sitemap.xml
0.16.11/: 404.html  index.html  sitemap.xml
0.16.12/: 404.html  index.html  sitemap.xml
0.16.2/: 404.html  index.html  sitemap.xml
0.16.3/: 404.html  index.html  sitemap.xml
0.16.4/: 404.html  index.html  sitemap.xml
0.16.5/: 404.html  index.html  sitemap.xml
0.16.6/: 404.html  index.html  sitemap.xml
0.16.7/: 404.html  index.html  objects.inv  sitemap.xml
0.16.8/: 404.html  index.html  sitemap.xml
0.16.9/: 404.html  index.html  sitemap.xml
0.17.0/: 404.html  index.html  sitemap.xml
0.17.1/: 404.html  index.html  sitemap.xml
0.17.2/: 404.html  index.html  sitemap.xml
0.18.0/: 404.html  index.html  sitemap.xml
0.19.0/: 404.html  index.html  objects.inv  sitemap.xml
0.19.1/: 404.html  index.html  sitemap.xml
0.19.2/: 404.html  index.html  sitemap.xml
0.19.3/: 404.html  index.html  objects.inv  sitemap.xml
0.19.4/: 404.html  index.html  sitemap.xml
0.20.0/: 404.html  index.html  sitemap.xml
0.20.1/: 404.html  index.html  sitemap.xml
0.20.2/: 404.html  index.html  objects.inv  sitemap.xml
0.20.3/: 404.html  index.html  sitemap.xml
0.21.0/: 404.html  index.html  objects.inv  sitemap.xml
0.22.0/: 404.html  index.html  sitemap.xml
0.22.1/: 404.html  index.html  sitemap.xml
0.22.2/: 404.html  index.html  sitemap.xml
0.23.0/: 404.html  index.html  sitemap.xml
0.23.1/: 404.html  index.html  objects.inv  sitemap.xml
0.24.0/: 404.html  index.html  sitemap.xml
0.24.1/: 404.html  index.html  objects.inv  sitemap.xml
0.25.0/: 404.html  index.html  sitemap.xml
0.25.1/: 404.html  index.html  objects.inv  sitemap.xml
0.25.2/: 404.html  index.html  sitemap.xml
0.25.3/: 404.html  index.html  sitemap.xml
0.25.4/: 404.html  index.html  sitemap.xml
0.25.5/: 404.html  index.html  sitemap.xml
0.9.0/: 404.html  index.html  objects.inv  sitemap.xml
0.9.1/: 404.html  index.html  sitemap.xml
0.9.2/: 404.html  index.html  objects.inv  sitemap.xml
0.9.3/: 404.html  index.html  sitemap.xml
0.9.4/: 404.html  index.html  sitemap.xml
0.9.5/: 404.html  index.html  sitemap.xml
0.9.6/: 404.html  index.html  sitemap.xml
0.9.7/: 404.html  index.html  sitemap.xml
0.9.8/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
optimade-client/: pyproject.toml  setup.py
optimade-client/optimade/adapters/: __init__.py  base.py
optimade-client/optimade/adapters/references/: __init__.py
optimade-client/optimade/adapters/structures/: __init__.py  ase.py  utils.py
optimade-client/optimade/client/: __init__.py  cli.py  client.py
optimade-server/: pyproject.toml  requirements.txt  setup.py
optimade-server/optimade/filtertransformers/: django.py  elasticsearch.py  mongo.py
optimade-server/optimade/server/: config.py  exception_handlers.py  index_links.json  main.py  main_index.py  middleware.py  query_params.py  schemas.py  warnings.py
optimade-server/optimade/server/data/: __init__.py  providers.json  test_links.json  test_structures_v0.9.7.json
optimade-server/optimade/server/entry_collections/: elastic_indexes.json  entry_collections.py
optimade-server/optimade/server/mappers/: links.py  structures.py
optimade-server/optimade/server/routers/: __init__.py  index_info.py  info.py  landing.py  links.py  references.py  structures.py  utils.py  versions.py
optimade-server/optimade/server/routers/static/: landing_page.html
optimade-validator/: pyproject.toml  requirements.txt  setup.py
optimade-validator/optimade/validator/: __init__.py  config.py  utils.py  validator.py
optimade-validator/optimade/validator/data/: filters.txt
(+7877 files in other folders)
